--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "f7d8d5c8-07c3-4d7e-9fc6-0fcbad91de84"
   },
   "newProjectRoot": "projects",
   "projects": {
