--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.2",
     "express": "^5.1.0",
+    "firebase": "^12.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
